--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,7 @@ html {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 p {
   font-size: 1.1rem;
@@ -97,4 +97,4 @@ p {
   }
 }
 
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
